# climateclaw

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: release_ci.yml  test_ci.yml
scripts/: climate.sh
src/climateclaw/: __init__.py  _version.py  analysis.py  fetch.py  utils.py
tests/: test_analysis.py  test_fetch.py
